Update 'plcnvf5na-python' component image to: quay.io/rhtap_qe/rhtap-qe:76028b9a7b7031dd65aad207e867616776b271e4@sha256:66093918ce56fea5d12d965a0bbe41ca85fbd7a66c6c193f690923cbfca9bc5e

--- a/components/plcnvf5na-python/overlays/development/deployment-patch.yaml
+++ b/components/plcnvf5na-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: plcnvf5na-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:76028b9a7b7031dd65aad207e867616776b271e4@sha256:66093918ce56fea5d12d965a0bbe41ca85fbd7a66c6c193f690923cbfca9bc5e
+          name: container-image
